--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#B31312</color>
+    <color name="colorSecondary">#2B2A4C</color>
+    <color name="colorAccent">#EA906C</color>
+    <color name="colorTertiary">#EEE2DE</color>
+
+    <color name="corner_drawer_transparent">#FFF</color>
+
+    <!-- Grey -->
+    <color name="grey_50">#fffafafa</color>
+    <color name="grey_50_trans">#80fafafa</color>
+    <color name="grey_100">#fff5f5f5</color>
+    <color name="grey_100_trans">#80f5f5f5</color>
+    <color name="grey_200">#ffeeeeee</color>
+    <color name="grey_200_trans">#80eeeeee</color>
+    <color name="grey_300">#ffe0e0e0</color>
+    <color name="grey_300_trans">#80e0e0e0</color>
+    <color name="grey_400">#ffbdbdbd</color>
+    <color name="grey_400_trans">#80bdbdbd</color>
+    <color name="grey_500">#ff9e9e9e</color>
+    <color name="grey_500_trans">#809e9e9e</color>
+    <color name="grey_600">#ff757575</color>
+    <color name="grey_600_trans">#80757575</color>
+    <color name="grey_700">#ff616161</color>
+    <color name="grey_700_trans">#80616161</color>
+    <color name="grey_800">#ff424242</color>
+    <color name="grey_800_trans">#80424242</color>
+    <color name="grey_900">#ff212121</color>
+    <color name="grey_900_trans">#80212121</color>
+
 </resources>
