--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,12 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
+
     <style name="Base.Theme.FluxLauncher" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorOnPrimary">@color/colorAccent</item>
+        <item name="bottomSheetStyle">@style/DrawerBottomSheet</item>
+        <item name="android:fontFamily">@android:fontFamily/system_font</item>
     </style>
 
     <style name="Theme.FluxLauncher" parent="Base.Theme.FluxLauncher" />
+
 </resources>
