--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,39 +15,18 @@
         android:layout_height="match_parent"
         android:backgroundTint="@color/colorAccent"
         app:behavior_horizontalExpandingRatio="0.1"
-        app:behavior_horizontal_peekHeight="@dimen/_110sdp"
-        app:behavior_peekHeight="@dimen/_55sdp"
+        app:behavior_horizontal_peekHeight="@dimen/_105sdp"
+        app:behavior_peekHeight="@dimen/_65sdp"
         app:layout_behavior="@string/corner_sheet_behavior"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerShape">
-
-        <TextView
-            android:paddingStart="@dimen/_10sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:background="@drawable/bg_rounded_18dp"
-            android:layout_margin="@dimen/_10sdp"
-            app:drawableTint="@color/black"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:textStyle="bold"
-            android:visibility="visible"
-            android:textSize="@dimen/_13ssp"
-            android:textColor="@color/black"
-            android:drawablePadding="@dimen/_5sdp"
-            android:gravity="center"
-            android:text="All Apps"
-            android:id="@+id/text"
-            android:drawableStart="@drawable/ic_all_apps"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/_35sdp"/>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_35sdp"
-            android:layout_marginStart="@dimen/_18sdp"
-            android:layout_marginTop="@dimen/_45sdp"
+            android:layout_margin="@dimen/_15sdp"
             android:background="@null"
-            android:visibility="invisible"
+            android:elevation="@dimen/_10sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tabGravity="start"
@@ -54,12 +35,91 @@
             app:tabIndicatorColor="@color/white"
             app:tabIndicatorFullWidth="true"
             app:tabIndicatorGravity="stretch"
+            app:tabInlineLabel="true"
             app:tabMinWidth="@dimen/_80sdp"
             app:tabMode="scrollable"
             app:tabRippleColor="@null"
+            app:tabSelectedTextAppearance="@style/TabTextAppearance"
             app:tabSelectedTextColor="@color/black"
-            app:tabTextAppearance="@style/TabTextAppearance"
-            app:tabTextColor="@color/grey_600" />
+            app:tabTextAppearance="@style/TabTextUnselectedAppearance" />
+
+        <RelativeLayout
+            android:id="@+id/rl_search"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginHorizontal="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:background="@drawable/bg_rounded_18dp"
+            android:elevation="@dimen/_10sdp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tabs">
+
+            <ImageView
+                android:id="@+id/iv_search"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="@dimen/_8sdp"
+                android:importantForAccessibility="no"
+                app:srcCompat="@drawable/ic_search"
+                app:tint="@color/colorPrimary" />
+
+            <EditText
+                android:id="@+id/et_search"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_toStartOf="@+id/iv_cancel"
+                android:layout_toEndOf="@+id/iv_search"
+                android:background="@null"
+                android:focusable="true"
+                android:gravity="center_vertical"
+                android:hint="@string/search_hint"
+                android:imeOptions="actionSearch"
+                android:importantForAutofill="no"
+                android:inputType="textFilter|textCapWords"
+                android:singleLine="true"
+                android:textSize="@dimen/_13ssp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey_600" />
+
+            <ImageView
+                android:id="@+id/iv_cancel"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:importantForAccessibility="no"
+                android:padding="@dimen/_6sdp"
+                android:visibility="@{etSearch.text.length() > 0 ? View.VISIBLE : View.GONE}"
+                app:srcCompat="@drawable/ic_cancel"
+                app:tint="@color/colorPrimary" />
+
+        </RelativeLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_filters"
+            android:layout_width="0dp"
+            android:elevation="@dimen/_10sdp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:clipToPadding="false"
+            android:nestedScrollingEnabled="false"
+            android:orientation="horizontal"
+            android:paddingHorizontal="@dimen/_15sdp"
+            android:tag="@string/apps"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rl_search"
+            tools:itemCount="50"
+            tools:listitem="@layout/item_filter"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
@@ -68,7 +128,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tabs" />
+            app:layout_constraintTop_toBottomOf="@+id/rv_filters" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
