--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,12 +24,20 @@
         <item name="textAllCaps">false</item>
     </style>
 
+    <style name="TabTextUnselectedAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:fontFamily">@android:fontFamily/system_font</item>
+        <item name="android:textSize">@dimen/_13ssp</item>
+        <item name="android:textAllCaps">false</item>
+             <item name="textAllCaps">false</item>
+    </style>
+
     <!-- Bottom Sheet -->
 
     <style name="DrawerBottomSheet" parent="Widget.MaterialComponents.BottomSheet">
         <item name="shapeAppearanceOverlay">
             @style/DrawerShapeAppearanceOverlay.MaterialComponents.BottomSheet
         </item>
+        <item name="android:windowIsFloating">false</item>
     </style>
 
     <style name="DrawerShapeAppearanceOverlay.MaterialComponents.BottomSheet" parent="">
@@ -40,6 +48,11 @@
     <style name="ShapeAppearanceOverlay.CornerShape" parent="">
         <item name="cornerSizeTopLeft">@dimen/_25sdp</item>
         <item name="cornerFamily">rounded</item>
+    </style>
+
+    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/grey_800</item>
     </style>
 
 </resources>
